# InvestmentAlarmForRaspiZero

./: .gitattributes  .gitignore  README.md  SPEC.md  config.alarms.yml  config.jp.yml  daily_system_jp_plus.py  events_ignore.csv  investment_alarms.py  notify.py  pyproject.toml  requirements.txt  sitecustomize.py  utils_data.py
.github/workflows/: ci.yml
config/: config.alarms.yml  config.jp.yml  events_ignore.csv  sector_map.csv
src/investment_alarm/: __init__.py  daily_system_jp_plus.py  investment_alarms.py  notify.py  status_page.py  utils_data.py
systemd/: daily-jp.service  daily-jp.timer  investment-alarms.service  investment-alarms.timer  jpplus.env.example
tests/: test_daily_system.py  test_holiday_helper.py  test_investment_alarms.py  test_sizing_and_email.py
